--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "push all": "git add -A \"git commit -m \"Bug fixes\"\" \"git push origin create-readme-file\""
   },
   "dependencies": {
+    "@sipec/vue3-tags-input": "^3.0.4",
+    "jquery": "^3.6.0",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
     "vue-router": "^4.0.16",
