--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sipec/vue3-tags-input": "^3.0.4",
+    "firebase": "^9.9.2-20220804201204",
     "jquery": "^3.6.0",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
