--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sipec/vue3-tags-input": "^3.0.4",
     "firebase": "^9.9.2",
+    "italian-badwords-list": "^1.0.3",
     "jquery": "^3.6.0",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
