--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@vitejs/plugin-vue": "^2.3.3",
+    "autoprefixer": "^10.4.10",
     "axios": "^0.27.2",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
     "install": "^0.13.0",
     "node-sass": "^7.0.1",
+    "postcss": "^8.4.16",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
+    "tailwindcss": "^3.1.8",
     "vite": "^2.9.12"
   }
 }
