--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sipec/vue3-tags-input": "^3.0.4",
+    "animate.css": "^4.1.1",
     "firebase": "^9.9.2",
     "italian-badwords-list": "^1.0.3",
     "jquery": "^3.6.0",
